welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:28: error: not found: value faire
    faire Motif()}
    ^